--- a/fastapi/auth/values.yaml
+++ b/fastapi/auth/values.yaml
@@ -1,18 +1,18 @@
-# Default values for gateway.
+# Default values for auth.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: andreyas/gateway-service
+  repository: andreyas/auth-service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
-fullnameOverride: "gateway-service"
+fullnameOverride: "auth-service"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -41,7 +41,7 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 5001
+  port: 5000
 
 ingress:
   enabled: true
@@ -50,7 +50,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: gateway.dragon-monkey.ru
+    - host: auth.dragon-monkey.ru
       paths:
         - path: /
           pathType: Prefix
