--- a/fastapi/auth/values.yaml
+++ b/fastapi/auth/values.yaml
@@ -8,6 +8,7 @@ image:
   repository: andreyas/auth-service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
+  tag: "0.0.2"
 
 
 imagePullSecrets: []
