--- a/fastapi/auth-service/values.yaml
+++ b/fastapi/auth-service/values.yaml
@@ -1,4 +1,4 @@
-# Default values for auth.
+# Default values for auth-service.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -51,7 +51,7 @@ ingress:
     kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: auth.dragon-monkey.ru
+    - host: auth-service.dragon-monkey.ru
       paths:
         - path: /
           pathType: Prefix
