--- a/fastapi/auth-service/values.yaml
+++ b/fastapi/auth-service/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: andreyas/auth-service
+  repository: docker.io/andreyas/auth-service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.0.2"
