--- a/fastapi/gateway/templates/serviceaccount.yaml
+++ b/fastapi/gateway/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "gateway.serviceAccountName" . }}
+  name: {{ include "gateway-service.serviceAccountName" . }}
   labels:
-    {{- include "gateway.labels" . | nindent 4 }}
+    {{- include "gateway-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
