--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -27,7 +27,13 @@ serviceAccount:
 
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
-  vault.hashicorp.com/agent-inject-secret-helloworld: "fastapi/env"
+  vault.hashicorp.com/agent-inject-secret-env: "fastapi/env"
+  vault.hashicorp.com/secret-volume-path-env: "/app"
+  vault.hashicorp.com/agent-inject-file-env: ".env"
+  vault.hashicorp.com/agent-inject-template-env: |
+      {{- with secret "fastapi/env" -}}
+      {{ base64Decode .Data.data.env }}
+      {{-  end }}
   vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
 
@@ -95,18 +101,18 @@ autoscaling:
 # Additional volumes on the output Deployment definition.
 
 
-volumes:
- - name: config
-   configMap:
-     name: env
-     optional: false
+#volumes:
+# - name: config
+#   configMap:
+#     name: env
+#     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts:
- - name: config
-   mountPath: "/app/.env"
-   readOnly: true
-   subPath: .env
+#volumeMounts:
+# - name: config
+#   mountPath: "/app/.env"
+#   readOnly: true
+#   subPath: .env
 
 nodeSelector: {}
 
