--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -29,13 +29,11 @@ podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
   vault.hashicorp.com/agent-inject-status: "update"
   vault.hashicorp.com/agent-inject-secret-env: "fastapi/env/env"
-  
-  
   vault.hashicorp.com/agent-inject-template-env: |
       {{- with secret "fastapi/env" -}}
       {{ base64Decode .Data.data.env }}
       {{- end -}}
-  vault.hashicorp.com/secret-volume-path-env: "/app/env"
+  vault.hashicorp.com/secret-volume-path-env: "/app/"
   vault.hashicorp.com/agent-inject-file-env: ".env"
   vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
