--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -33,7 +33,7 @@ podAnnotations:
       {{- with secret "fastapi/env" -}}
       {{ base64Decode .Data.data.env }}
       {{- end -}}
-  vault.hashicorp.com/secret-volume-path-env: "/app/"
+  vault.hashicorp.com/secret-volume-path-env: "app/"
   vault.hashicorp.com/agent-inject-file-env: ".env"
   vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
