--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -28,8 +28,8 @@ serviceAccount:
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
   vault.hashicorp.com/agent-inject-status: "update"
-  vault.hashicorp.com/agent-inject-secret-env: "fastapi/env/env"
-  vault.hashicorp.com/agent-inject-template-env: |
+  vault.hashicorp.com/agent-inject-secret-.env: "fastapi/env/env"
+  vault.hashicorp.com/agent-inject-template-.env: |
       {{- with secret "fastapi/env" -}}
       {{ base64Decode .Data.data.env }}
       {{- end -}}
