--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -6,6 +6,7 @@ replicaCount: 1
 
 image:
   repository: andreyas/gateway-service
+  imagePullPolicy: Always
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
