--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -34,7 +34,7 @@ podAnnotations:
       {{- end -}}
 #  vault.hashicorp.com/secret-volume-path-env: "app/"
 #  vault.hashicorp.com/agent-inject-file-env: ".env"
-  vault.hashicorp.com/agent-inject-command-database.properties: |
+  vault.hashicorp.com/agent-inject-command-.env: |
       ln /vault/secrets/.env /app/.env
   vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
