--- a/fastapi/gateway-service/templates/deployment.yaml
+++ b/fastapi/gateway-service/templates/deployment.yaml
@@ -32,11 +32,13 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
+          env:
+            - name: ENV
+              value: /vault/secrets/{{ .Values.variables.env }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env: {{ .Values.variables.env }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
