--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -30,16 +30,16 @@ serviceAccount:
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
 #  vault.hashicorp.com/agent-init-first: "true"
-  vault.hashicorp.com/agent-inject-secret-.env: "fastapi/env/env"
-  vault.hashicorp.com/agent-inject-template-.env: |
+  vault.hashicorp.com/agent-inject-secret-prod: "fastapi/env/env"
+  vault.hashicorp.com/agent-inject-template-prod: |
       {{- with secret "fastapi/env" -}}
       {{ base64Decode .Data.data.env }}
       {{- end -}}
 #  vault.hashicorp.com/secret-volume-path-env: "app/"
 #  vault.hashicorp.com/agent-inject-file-env: ".env"
-  vault.hashicorp.com/agent-inject-command-.env: |
-      ln /vault/secrets/.env /app/.env
-  vault.hashicorp.com/role: "gateway-service"
+#  vault.hashicorp.com/agent-inject-command-.env: |
+#      ln /vault/secrets/.env /app/.env
+#  vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
 
 podSecurityContext: {}
