--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -39,7 +39,7 @@ podAnnotations:
 #  vault.hashicorp.com/agent-inject-file-env: ".env"
 #  vault.hashicorp.com/agent-inject-command-.env: |
 #      ln /vault/secrets/.env /app/.env
-#  vault.hashicorp.com/role: "gateway-service"
+  vault.hashicorp.com/role: "gateway-service"
 podLabels: {}
 
 podSecurityContext: {}
