--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -30,10 +30,21 @@ serviceAccount:
 podAnnotations:
   vault.hashicorp.com/agent-inject: "true"
 #  vault.hashicorp.com/agent-init-first: "true"
-  vault.hashicorp.com/agent-inject-secret-prod: "fastapi/env/env"
+  vault.hashicorp.com/agent-inject-secret-prod: "fastapi/env"
   vault.hashicorp.com/agent-inject-template-prod: |
       {{- with secret "fastapi/env" -}}
-      {{ base64Decode .Data.data.env }}
+      export GMAIL_ADDRESS="{{ .Data.data.GMAIL_ADDRESS }}"
+      export GMAIL_PASSWORD="{{ .Data.data.GMAIL_PASSWORD }}"
+      export RABBITMQ_URL="{{ .Data.data.RABBITMQ_URL }}"
+      export AUTH_BASE_URL="{{ .Data.data.AUTH_BASE_URL }}"
+      export JWT_SECRET="{{ .Data.data.JWT_SECRET }}"
+      export POSTGRES_HOST="{{ .Data.data.POSTGRES_HOST }}"
+      export POSTGRES_DB="{{ .Data.data.POSTGRES_DB }}"
+      export POSTGRES_USER="{{ .Data.data.POSTGRES_USER }}"
+      export POSTGRES_PASSWORD="{{ .Data.data.POSTGRES_PASSWORD }}"
+      export POSTGRES_PORT="{{ .Data.data.POSTGRES_PORT }}"
+
+#      {{ base64Decode .Data.data.env }}
       {{- end -}}
 #  vault.hashicorp.com/secret-volume-path-env: "app/"
 #  vault.hashicorp.com/agent-inject-file-env: ".env"
