--- a/fastapi/gateway-service/templates/deployment.yaml
+++ b/fastapi/gateway-service/templates/deployment.yaml
@@ -35,6 +35,11 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          command:
+            - /bin/sh
+          args:
+            - 'c'
+            - 'source /vault/secrets/prod && sleep 3600'
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
