--- a/fastapi/gateway-service/templates/deployment.yaml
+++ b/fastapi/gateway-service/templates/deployment.yaml
@@ -35,10 +35,8 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          command:
-            ["/bin/bash", "-c"]
-          args:
-            ["source /vault/secrets/prod && sleep 3600"]
+          command: ["/bin/bash", "-c", ]
+          args: ["source /vault/secrets/prod && python main.py"]
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
