--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -15,6 +15,19 @@ image:
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: "gateway-service"
+args: |
+source /vault/secrets/prod;
+export GMAIL_ADDRESS;
+export GMAIL_PASSWORD;
+export RABBITMQ_URL;
+export AUTH_BASE_URL;
+export JWT_SECRET;
+export POSTGRES_HOST;
+export POSTGRES_DB;
+export POSTGRES_USER;
+export POSTGRES_PASSWORD;
+export POSTGRES_PORT;
+python main.py;
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -33,16 +46,16 @@ podAnnotations:
   vault.hashicorp.com/agent-inject-secret-prod: "fastapi/env"
   vault.hashicorp.com/agent-inject-template-prod: |
       {{- with secret "fastapi/env" -}}
-        export GMAIL_ADDRESS="{{ .Data.data.GMAIL_ADDRESS }}"
-        export GMAIL_PASSWORD="{{ .Data.data.GMAIL_PASSWORD }}"
-        export RABBITMQ_URL="{{ .Data.data.RABBITMQ_URL }}"
-        export AUTH_BASE_URL="{{ .Data.data.AUTH_BASE_URL }}"
-        export JWT_SECRET="{{ .Data.data.JWT_SECRET }}"
-        export POSTGRES_HOST="{{ .Data.data.POSTGRES_HOST }}"
-        export POSTGRES_DB="{{ .Data.data.POSTGRES_DB }}"
-        export POSTGRES_USER="{{ .Data.data.POSTGRES_USER }}"
-        export POSTGRES_PASSWORD="{{ .Data.data.POSTGRES_PASSWORD }}"
-        export POSTGRES_PORT="{{ .Data.data.POSTGRES_PORT }}"
+        GMAIL_ADDRESS="{{ .Data.data.GMAIL_ADDRESS }}"
+        GMAIL_PASSWORD="{{ .Data.data.GMAIL_PASSWORD }}"
+        RABBITMQ_URL="{{ .Data.data.RABBITMQ_URL }}"
+        AUTH_BASE_URL="{{ .Data.data.AUTH_BASE_URL }}"
+        JWT_SECRET="{{ .Data.data.JWT_SECRET }}"
+        POSTGRES_HOST="{{ .Data.data.POSTGRES_HOST }}"
+        POSTGRES_DB="{{ .Data.data.POSTGRES_DB }}"
+        POSTGRES_USER="{{ .Data.data.POSTGRES_USER }}"
+        POSTGRES_PASSWORD="{{ .Data.data.POSTGRES_PASSWORD }}"
+        POSTGRES_PORT="{{ .Data.data.POSTGRES_PORT }}"
       {{- end -}}
 #  vault.hashicorp.com/secret-volume-path-env: "app/"
 #  vault.hashicorp.com/agent-inject-file-env: ".env"
