--- a/fastapi/gateway-service/values.yaml
+++ b/fastapi/gateway-service/values.yaml
@@ -88,9 +88,9 @@ resources:
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
    limits:
-     cpu: 500m
+     cpu: 300m
      memory: 256Mi
-  # requests:
+   requests:
      cpu: 100m
      memory: 128Mi
 
