--- a/fastapi/auth-service/values.yaml
+++ b/fastapi/auth-service/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: docker.io/andreyas/auth-service
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.0.2"
 
